# defectb-ml

./: .gitignore  LICENCE  LICENSE  README.md  pyproject.toml
defectb_ai/: __init__.py
defectb_ai/data_loader/: __init__.py  config.py  dataloader.py  mydataset.py
defectb_ai/models/: network.py
defectb_ai/tests/: test_models.py
defectb_ai/tests/conv_attention/: __init__.py  config_transf.py  pred_Conv1DSelfAtten.py  train_Conv1DSelfAtten.py
defectb_ml/models/: __init__.py  callbacks.py
defectb_ml/tests/: __init__.py  test_data_loader.py
examples/conv_attention/: config_transf.py  results_c_n_0.txt
examples/conv_attention/lightning_logs/version_0/: events.out.tfevents.1764599617.UNIFVFFK0E8Q05P.71354.0
examples/conv_attention/tb_logs/c_dimer_nedos_400_tb/version_0/: events.out.tfevents.1764599507.UNIFVFFK0E8Q05P.70753.0  events.out.tfevents.1764599527.UNIFVFFK0E8Q05P.70753.3  events.out.tfevents.1764599531.UNIFVFFK0E8Q05P.70753.5
examples/conv_attention/tb_logs/c_dimer_nedos_400_tb/version_0/checkpoints/: epoch=0-step=200.ckpt
examples/conv_attention/tb_logs/c_dimer_nedos_400_tb/version_0/losses_train/: events.out.tfevents.1764599522.UNIFVFFK0E8Q05P.70753.2
examples/conv_attention/tb_logs/c_dimer_nedos_400_tb/version_0/losses_valid/: events.out.tfevents.1764599512.UNIFVFFK0E8Q05P.70753.1  events.out.tfevents.1764599527.UNIFVFFK0E8Q05P.70753.4
examples/conv_attention/tb_logs/profiler/lin/c_dimer_nedos_400_tb/: UNIFVFFK0E8Q05P_70753.1764599516639703000.pt.trace.json  UNIFVFFK0E8Q05P_70753.1764599522597867000.pt.trace.json  (+2 more)
